--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
         "Clockdisplay",
         "Datenfelder",
         "Numberdisplay"
+    ],
+    "cSpell.words": [
+        "logline"
     ]
 }
