Finished setup ch10

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
+            "mainClass": "com.blueJ.chapter10.networkV1.Main",
+            "projectName": "DriniTraining"
+        },
+        {
+            "type": "java",
             "name": "Launch Calculator",
             "request": "launch",
             "mainClass": "com.blueJ.chapter09.Calculator.Calculator",
