--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,13 @@
             "type": "java",
             "name": "Launch Main",
             "request": "launch",
+            "mainClass": "com.blueJ.chapter10.networkV2.Main",
+            "projectName": "DriniTraining"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
             "mainClass": "com.blueJ.chapter10.networkV1.Main",
             "projectName": "DriniTraining"
         },
