--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,20 @@
             "type": "java",
             "name": "Launch Main",
             "request": "launch",
+            "mainClass": "com.blueJ.chapter12.foxesAndRabbitsV2.Main",
+            "projectName": "DriniTraining"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
+            "mainClass": "com.blueJ.chapter12.foxesAndRabbitsV1.Main",
+            "projectName": "DriniTraining"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
             "mainClass": "com.blueJ.chapter11.networkV3.Main",
             "projectName": "DriniTraining"
         },
