--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,13 @@
             "type": "java",
             "name": "Launch Main",
             "request": "launch",
+            "mainClass": "com.blueJ.chapter13.imageviewer40.Main",
+            "projectName": "driniblueJ"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
             "mainClass": "com.blueJ.chapter13.imageviewer20.Main",
             "projectName": "driniblueJ"
         },
